# tarunai-connect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  public_registry.json  registry.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  cli-wishlist.yml  config.yml  contributor-signup.yml  feature_request.yml
.github/scripts/: generate_meta_skill.py  pr-labeler.js  sync_root_skills.py  update_registry_dates.py
.github/workflows/: publish-cli-hub.yml
3MF/agent-harness/: 3MF.md  setup.py
QGIS/agent-harness/: QGIS.md  setup.py
adguardhome/agent-harness/: ADGUARDHOME.md  setup.py
anygen/agent-harness/: ANYGEN.md  setup.py
assets/demos/: README.md
audacity/agent-harness/: setup.py
blender/agent-harness/: setup.py
browser/agent-harness/: HARNESS.md  setup.py
calibre/agent-harness/: .gitignore  CALIBRE.md  FIX_NOTES.md  setup.py
chromadb/agent-harness/: CHROMADB.md  setup.py
cli-hub/: README.md  setup.py
cli-hub-meta-skill/: SKILL.md
cli-hub/tarunai_connect/: __init__.py  analytics.py  cli.py  installer.py  preview.py  (+1 more)
codex-skill/: SKILL.md
docs/: FREECAD_VIDEO_REFERENCE.md  PREVIEW_MECHANISM_PROGRESS.md  PREVIEW_PROGRESS.md  PREVIEW_PROTOCOL.md
macrocli/: SKILL.md
n8n/agent-harness/: pyproject.toml  setup.py
n8n/agent-harness/cli_anything/n8n/: n8n_cli.py
n8n/agent-harness/cli_anything/n8n/tests/: test_repl_invocation.py
n8n/agent-harness/tarunai_connect/n8n/: README.md  __init__.py  __main__.py  n8n_cli.py
n8n/agent-harness/tarunai_connect/n8n/core/: credentials.py  executions.py  project.py  tags.py  variables.py  versions.py  workflows.py
n8n/agent-harness/tarunai_connect/n8n/skills/: SKILL.md
n8n/agent-harness/tarunai_connect/n8n/tests/: TEST.md  test_core.py  test_full_e2e.py  test_repl_invocation.py
n8n/agent-harness/tarunai_connect/n8n/utils/: repl_skin.py
opencode-commands/: cli-anything-list.md  cli-anything-refine.md  cli-anything-test.md  cli-anything-validate.md  cli-anything.md
skills/: README.md
slay_the_spire_ii/: README.md
(+910 files in other folders)
